--- a/Nature.html
+++ b/Nature.html
@@ -11,7 +11,7 @@
   </head>
   <body data-bs-theme="light">
     <div class="video-wrapper">
-        <video autoplay muted loop id="video">
+        <video playsinline autoplay muted loop id="video">
             <source src="assets/video/nature.mp4" type="video/mp4">
         </video>
     </div>
@@ -99,7 +99,7 @@
    </section>
    <footer class="footer">
     <div class="footer__inner">
-        <a class="footer__next-link" href="Home.html">
+        <a class="footer__next-link" href="index.html">
             Home
             <i class="bi bi-house"></i>
         </a>
