--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body data-bs-theme="light">
     <div class="video-wrapper">
-        <video autoplay muted loop id="video">
+        <video autoplay playsinline muted loop id="video">
             <source src="assets/video/bg.mp4" type="video/mp4">
         </video>
     </div>
