--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Odessa Love</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
-
+    <link rel="icon" href="anchor-icon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 
   </head>
   <body data-bs-theme="light">
     <div class="video-wrapper">
-        <video autoplay playsinline muted loop id="video">
+        <video class="video-player" autoplay="autoplay" playsinline muted loop id="video">
             <source src="assets/video/bg.mp4" type="video/mp4">
         </video>
     </div>
